Add missing serialVersionUID
- Remove redundant call to super()
- Use diamonds
- No need to nest
- Remove redundant parentheses
- Use valueOf()
- Add @Override